force-app/main/default/objects/Presales_Engineer__c/Presales_Engineer__c.object-meta.xml
<CustomObject>
    <label>Send to PS</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>P_S_Request_Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send to PS</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>