force-app/main/default/objects/Presales_Engineer__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Please enter details. This will be added into email sent to PS Team.</description>
    <inlineHelpText>Please enter details. This will be added into email sent to PS Team.</inlineHelpText>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>