force-app/main/default/objects/Presales_Engineer__c/fields/Email_ID_1__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_1__c</fullName>
    <label>CC  (1)</label>
    <type>Email</type>
</CustomField>