force-app/main/default/objects/Presales_Engineer__c/fields/Email_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_2__c</fullName>
    <label>CC (2)</label>
    <type>Email</type>
</CustomField>