force-app/main/default/objects/Presales_Engineer__c/fields/Email_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_3__c</fullName>
    <label>CC (3)</label>
    <type>Email</type>
</CustomField>