force-app/main/default/objects/Presales_Engineer__c/fields/Is_this_Recoverable__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Recoverable__c</fullName>
    <formula>TEXT(Presales_Funding_Request__r.PFR_Is_this_Recoverable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is this Recoverable?</label>
    <type>Text</type>
</CustomField>