force-app/main/default/objects/Presales_Engineer__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <formula>Presales_Funding_Request__r.PFR_Justification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Justification</label>
    <type>Text</type>
</CustomField>