force-app/main/default/objects/Presales_Engineer__c/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <formula>Presales_Funding_Request__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Region</label>
    <type>Text</type>
</CustomField>