force-app/main/default/objects/Presales_Engineer__c/fields/Presales_Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>Presales_Funding_Request__c</fullName>
    <label>Presales Funding Request</label>
    <referenceTo>Presales_Funding_Request__c</referenceTo>
    <relationshipLabel>Send to PS</relationshipLabel>
    <relationshipName>Presales_Engineers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <trackHistory>false</trueHistory>
    <type>MasterDetail</type>
</CustomField>